* 0.9
    - fullscreen/windowed mode switch in menu
    - fixed some english texts in menu
    - set game fps (60 fps by default)
    - level load/save support
    - fullscreen runs in native desktop resolution
    - fixed menu in fullscreen and cursor rendering
    - fixed more crashes

* 0.8
    - fixed crash at level end (rhbz#858887)

* 0.7
    - sound and music

* 0.5
    - fixed 64-bit builds

* 0.4 
    - local installation fixes
    - build script updated (better directory configuration, build flags from pkg-config)

* 0.3 
    - added game menu, new levels/tutorial, first "playable" release

* 0.2 
    - switched to english version, fixed help/settings/hints rendering

* 0.1 
    - first linux release