@@ -1,18 +1,12 @@
 TODO:
-void _3d_Load_Animations(void)
-_3d_Draw_3DAnimations(void)
-
-          pFrame->vfLocation[0] *= scale_back_factor_x();
-          pFrame->vfLocation[1] *= scale_back_factor_y();
-          pFrame->vfLocation[2] *= scale_back_factor_x();
-          pFrame->vfLocation[3] *= scale_back_factor_y();
-
 
 - on-line manual/help (Web)
 - proper default keys (in default ini file)
 - sync screen rendering with desktop frame rate? (blit/flip with sync wait?)
 - Set Window App name
 - Zrusit rotace na okrajich obrazovky!
+- grey beetle can't be selected by mouse when screen is resized
+- remove unnecessary options from ini files
 
 - transform settings frm setup to text config
 - Tips - wait for click (Load screen) - space to continue?
